--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@ a:hover{text-decoration:underline;}
 a:focus{outline: none !important;}
 table td{vertical-align: middle !important;}
 .clear:after,.main:after{content:".";display:block;height:0;clear:both;visibility:hidden;}.clear,.main{display:inline-block;}
+.fl{float:left;}
+.fr{float:right;}
 .mar{margin:0 auto}
 .blank20{ height:20px;width:100%}
 .blank100 {height:100px;width:100%}
@@ -568,12 +570,13 @@ li {
 }
 .banner_02{ background-image:url(../images/bg.png); background-repeat:no-repeat;  margin:0 auto; width:933px; height:300px; overflow:hidden; margin-bottom:15px;}
 
-#tj ul { margin:0 auto; text-align:center; width:600px; padding-top:30px; list-style: none;  padding-left:46px;/*ff*/
-*padding-left:0px;/*ie7*/
-_padding-left:0px;/*ie6*/    }
-#tj ul li{ display:block; float:left; margin-left:23px; width:110px;}
-#tj input{ height:52px; width:110px; background:#d5e8fc; border-radius:4px; border:10px solid #e67167; line-height:52px; border:0; padding-left:10px;}
-#tj input.joinBtn{ width:110px; height:52px; background:#fd685b; color:#fff; font-size:14px; cursor:pointer;}
+#tj form{margin:0 auto;text-align: center;width:550px;padding:30px 0 0;}
+#tj input{width:91px;padding-left: 10px;height:52px;  background:#d5e8fc; border-radius:4px;line-height:52px; border:0; margin-right:9px;}
+#tj input.btn{background: #fd685b;color:#fff;font-size:14px;cursor:pointer;padding:0;text-align: center;}
+#tj input.verify{width:70px;}
+#tj input.getVerify{width:110px;}
+#tj .hint{margin:0;text-align: right;padding-right: 10px;}
+
 
 #percent{font-size:16px; border:1px solid #d3d3d3; margin-top:30px; text-align:center;  border-collapse:collapse;}
 .per_title{width:300px; height:45px; background-color:#fbe9d0; }
